--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "keywords": [],
   "author": "Vega <lyradeperseo@gmail.com>",
-  "license": "MIT",
+  "license": "IMT",
   "bugs": {
     "url": "https://github.com/vegadelalyra/TODO-Delta/issues"
   },
